Modify wrap function for authentication, writing doLogin, add some utilities
